--- a/css/styles.css
+++ b/css/styles.css
@@ -44,17 +44,31 @@ body {
 
 #value-props {
   max-height: 720px; }
-  #value-props h2 {
-    position: absolute; }
-  #value-props .right-section h2 {
-    bottom: 50px;
-    font-size: 60px;
-    font-weight: bold; }
+  #value-props .container-fluid {
+    max-width: 1300px; }
+  #value-props .left-section {
+    position: relative;
+    padding: 0; }
+    #value-props .left-section h2 {
+      position: absolute;
+      left: 30px;
+      text-transform: uppercase;
+      color: white;
+      font-size: 35px;
+      width: 200px; }
+  #value-props .right-section {
+    padding: 0; }
+    #value-props .right-section h2 {
+      position: absolute;
+      color: #fff;
+      bottom: 20px;
+      font-size: 60px;
+      font-weight: bold; }
   #value-props .col-sm-4,
   #value-props .col-sm-8 {
     padding: 30px 0; }
   #value-props #img-a {
-    max-width: 80%;
+    max-width: 100%;
     padding-left: 0;
     margin-left: 0; }
   #value-props #img-c {
@@ -66,7 +80,7 @@ body {
     right: 0;
     z-index: 90; }
   #value-props #img-b {
-    height: auto;
+    min-height: 542px;
     max-width: 100%;
     padding: 0;
     background-repeat: no-repeat;
