--- a/css/styles.css
+++ b/css/styles.css
@@ -93,20 +93,20 @@ body {
     margin-top: 120px;
     width: 350px;
     z-index: 120; }
+  #shop .ion-ios-arrow-left {
+    left: 10%; }
+  #shop .ion-ios-arrow-right {
+    right: 10%; }
   #shop .ion-ios-arrow-left,
   #shop .ion-ios-arrow-right {
     font-size: 30px;
     position: absolute;
-    bottom: 0;
-    width: 100%; }
-  #shop .ion-ios-arrow-right {
-    background: blue; }
+    bottom: 20px; }
   #shop #product-views-carousel {
     position: absolute;
     height: auto;
     bottom: 0;
     z-index: 10;
-    width: 100%;
     height: 100%; }
     #shop #product-views-carousel .carousel-inner {
       position: relative; }
