--- a/css/styles.scss
+++ b/css/styles.scss
@@ -122,22 +122,25 @@ body {
         width: 350px;
         z-index: 120;
     }
+    .ion-ios-arrow-left {
+      left: 10%;
+    }
+    .ion-ios-arrow-right {
+      right: 10%;
+    }
     .ion-ios-arrow-left,
     .ion-ios-arrow-right {
       font-size: 30px;
       position: absolute;
-      bottom: 0;
-      width: 100%;
-    }
-    .ion-ios-arrow-right {
-      background: blue;
+      bottom: 20px;
+      // width: 100%;
     }
   #product-views-carousel {
     position: absolute;
     height: auto;
     bottom: 0;
     z-index: 10;
-    width: 100%;
+    // width: 100%;
     height: 100%;
 
     .carousel-inner {
