--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,6 +1,7 @@
 body {
     width: 100%;
     // background: red!important;
+    font-family: 'Open Sans', sans-serif;
 }
 #hero {
     padding-top: 120px;
@@ -57,7 +58,6 @@ body {
       max-height: 720px;
       // overflow: hidden;
         .container-fluid {
-          // background: red;
           max-width: 1300px;
         }
         .left-section {
@@ -114,13 +114,45 @@ body {
     }
 }
 #shop {
-    // background: gray;
+    background: rgba(86, 95, 100, 1);
     min-height: 720px;
     position: relative;
+    overflow-y: hidden;
     .product-details-row {
         margin-top: 120px;
         width: 350px;
         z-index: 120;
+
+         a {
+           color: white;
+           font-weight: 300;
+           letter-spacing: .5px;
+           font-size: 20px;
+           position: relative;
+           text-decoration: none;
+         }
+        a.active-tab:before {
+           display: block;
+           background: rgba(255,255,255,.5);
+           position: absolute;
+          //  bottom:0;
+           top:35px;
+           width: 110px;
+           height: 2px;
+           content: '';
+         }
+      .add-to-cart-cta {
+        background:  black;
+        display: block;
+        text-align: center;
+        padding: 15px 0;
+        color: white;
+        font-weight: 500;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        margin-bottom: 20px;
+        font-size: 25px;
+      }
     }
     .ion-ios-arrow-left {
       left: 10%;
@@ -133,15 +165,49 @@ body {
       font-size: 30px;
       position: absolute;
       bottom: 20px;
+      color: white;
+      z-index: 200;
       // width: 100%;
     }
+
+    h2 {
+      color: white;
+    }
+    h6 {
+      font-weight: 300;
+      opacity: .6;
+      font-size: 25px;
+      color: white;
+      margin-bottom: 35px;
+    }
+    .carousel-inner {
+      z-index: 20;
+    }
+    .item.active {
+      // background: red;
+      z-index: 10;
+      position: relative;
+      margin-top: 100px;
+      img {
+        // position: absolute;
+
+        z-index: 230;
+      }
+    }
   #product-views-carousel {
-    position: absolute;
+    // position: absolute;
     height: auto;
     bottom: 0;
     z-index: 10;
     // width: 100%;
     height: 100%;
+    max-width: 700px;
+    margin: 0 auto;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    right: 0;
+    text-align: center;
 
     .carousel-inner {
       position: relative;
@@ -167,5 +233,13 @@ body {
       // background: blue;
       z-index: 30;
     }
+  }
+  .separator {
+    display: block;
+    height:1px;
+    width: 90%;
+    margin: 20px auto;
+    background: #f3f3f3;
+    opacity: .2;
   }
 }
