A few media queries

--- a/css/styles.css
+++ b/css/styles.css
@@ -156,11 +156,11 @@ body {
     bottom: 0;
     z-index: 10;
     height: 100%;
-    max-width: 700px;
+    width: 800px;
     margin: 0 auto;
     position: absolute;
     top: 70px;
-    left: 0;
+    left: 80px;
     right: 0;
     text-align: center; }
     #shop #product-views-carousel .carousel-inner {
@@ -181,5 +181,27 @@ body {
     margin: 20px auto;
     background: #f3f3f3;
     opacity: .2; }
+
+@media (max-width: 1023px) {
+  body #product-views-carousel {
+    width: 800px; }
+  body #shop .item.active,
+  body #shop .item {
+    margin-top: 70px; } }
+@media (max-width: 1023px) and (min-width: 769px) {
+  body #product-views-carousel {
+    position: relative !important;
+    margin: 0 auto !important;
+    left: 0 !important; } }
+@media (max-width: 767px) {
+  #shop #product-views-carousel {
+    position: relative;
+    width: 70%;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: 0; }
+  #shop .product-details-row {
+    margin: 0 auto; } }
 
 /*# sourceMappingURL=styles.css.map */
