--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,3 +1,7 @@
+
+
+// $breakpoints: (phone: 320px, tablet: 768px, desktop: 1024px);
+
 body {
     width: 100%;
     // background: red!important;
@@ -204,11 +208,11 @@ body {
     z-index: 10;
     // width: 100%;
     height: 100%;
-    max-width: 700px;
+    width: 800px;
     margin: 0 auto;
     position: absolute;
     top: 70px;
-    left: 0;
+    left: 80px;
     right: 0;
     text-align: center;
 
@@ -244,5 +248,47 @@ body {
     margin: 20px auto;
     background: #f3f3f3;
     opacity: .2;
+  }
+}
+
+
+
+@import "include";
+
+@include media("<desktop") {
+  body {
+    #product-views-carousel {
+      width: 800px;
+    }
+    #shop .item.active,
+    #shop .item {
+      margin-top: 70px;
+    }
+  }
+}
+
+@include media("<desktop", ">tablet") {
+  body {
+    #product-views-carousel {
+      position: relative!important;
+      margin: 0 auto!important;
+      left: 0!important;
+    }
+  }
+}
+
+@include media("<tablet") {
+  #shop {
+    #product-views-carousel {
+      position: relative;
+      width: 70%;
+      margin: 0 auto;
+      left: 0;
+      right: 0;
+      top:0;
+    }
+    .product-details-row {
+      margin:0 auto;
+    }
   }
 }
