Updates to bk color

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ body {
     background-position: center; }
 
 #shop {
-  background: #aaa;
+  background: #585858;
   min-height: 720px;
   position: relative;
   overflow-y: hidden; }
