--- a/css/styles.scss
+++ b/css/styles.scss
@@ -118,7 +118,7 @@ body {
     }
 }
 #shop {
-    background: #aaa;
+    background: #585858;
     min-height: 720px;
     position: relative;
     overflow-y: hidden;
