--- a/css/styles.scss
+++ b/css/styles.scss
@@ -284,11 +284,12 @@ body {
       margin: 0 auto;
       margin-top: 30px;
       font-size: 10vw;
+      max-width: 90%;
     }
     a {
       text-align: center;
       display: block;
-      width: 350px;
+      max-width: 350px;
       margin: 30px auto 90px auto;
     }
       .hero-img-holder img {
