--- a/css/styles.scss
+++ b/css/styles.scss
@@ -7,9 +7,19 @@ body {
     // background: red!important;
     font-family: 'Open Sans', sans-serif;
 }
-nav.navbar img {
-  width: 120px;
-}
+nav {
+    .navbar-header img {
+      width: 120px;
+      margin-top: -5px;
+    }
+    a.text-right {
+        position: absolute;
+        top: 23px;
+        font-weight: 400;
+        letter-spacing: .25px;
+        right:25px;
+      }
+  }
 #hero {
     padding-top: 120px;
     margin: 0 auto;
