--- a/css/styles.scss
+++ b/css/styles.scss
@@ -18,6 +18,7 @@ nav {
         font-weight: 400;
         letter-spacing: .25px;
         right:25px;
+        text-decoration: none;
       }
   }
 #hero {
