--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,8 @@ nav a.text-right {
   font-weight: 400;
   letter-spacing: .25px;
   right: 25px;
-  text-decoration: none; }
+  text-decoration: none;
+  cursor: pointer; }
 
 #hero {
   padding-top: 120px;
