--- a/css/styles.scss
+++ b/css/styles.scss
@@ -19,6 +19,7 @@ nav {
         letter-spacing: .25px;
         right:25px;
         text-decoration: none;
+        cursor: pointer;
       }
   }
 #hero {
