--- a/css/styles.css
+++ b/css/styles.css
@@ -262,7 +262,9 @@ footer#footer {
       width: 100% !important; }
     #hero .item a {
       bottom: 13%;
-      font-size: 20px; }
+      font-size: 20px;
+      min-width: 80%;
+      padding: 15px 10px; }
 
   #shop #product-views-carousel {
     position: relative;
