--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Open Sans', sans-serif; }
 
 nav img.brand-logo {
-  width: 200px;
+  width: 130px;
   margin: 10px auto !important;
   text-align: center; }
 
@@ -112,7 +112,7 @@ nav img.brand-logo {
     background-position: center; }
 
 #shop {
-  background: #585858;
+  background: #fff;
   min-height: 720px;
   position: relative;
   overflow-y: hidden;
@@ -120,9 +120,12 @@ nav img.brand-logo {
   #shop .product-details-row {
     margin-top: 120px;
     width: 350px;
-    z-index: 120; }
+    z-index: 120;
+    background: white;
+    border: 1px solid #fff;
+    border-radius: 13px; }
     #shop .product-details-row a {
-      color: white;
+      color: black;
       font-weight: 400;
       letter-spacing: .5px;
       font-size: 20px;
@@ -130,7 +133,7 @@ nav img.brand-logo {
       text-decoration: none; }
     #shop .product-details-row a.active-tab:before {
       display: block;
-      background: rgba(255, 255, 255, 0.5);
+      background: rgba(0, 0, 0, 0.5);
       position: absolute;
       left: 0;
       right: 0;
@@ -140,23 +143,23 @@ nav img.brand-logo {
       content: ''; }
     #shop .product-details-row .quantity-header,
     #shop .product-details-row .color-header {
-      color: white;
+      color: black;
       margin-right: 15px;
       font-size: 20px; }
     #shop .product-details-row .quantity-number-selected {
       font-weight: 500;
-      color: white;
+      color: black;
       display: inline-block;
       font-size: 22px;
       margin: 0 7px; }
     #shop .product-details-row .quantity-button {
       border: 0;
-      color: white;
+      color: rgba(0, 0, 0, 0.9);
       font-size: 20px;
       border-radius: 120px;
       width: 35px;
-      background: rgba(255, 255, 255, 0.1);
-      border: 1px solid #fff; }
+      background: rgba(0, 0, 0, 0.2);
+      border: 1px solid rgba(0, 0, 0, 0.5); }
     #shop .product-details-row .add-to-cart-cta {
       background: black;
       display: block;
@@ -168,13 +171,17 @@ nav img.brand-logo {
       letter-spacing: 1px;
       margin-bottom: 20px;
       font-size: 25px; }
-    #shop .product-details-row ul.select-color-list {
+    #shop .product-details-row ul.select-color-list-2 {
+      margin-bottom: -30px;
+      bottom: -20px; }
+    #shop .product-details-row ul.select-color-list,
+    #shop .product-details-row ul.select-color-list-2 {
       display: inline-block;
       list-style-type: none;
       position: absolute;
-      left: 18.5%;
-      top: -5px; }
-      #shop .product-details-row ul.select-color-list li {
+      left: 18.5%; }
+      #shop .product-details-row ul.select-color-list li,
+      #shop .product-details-row ul.select-color-list-2 li {
         display: inline-block;
         width: 30px;
         height: 30px;
@@ -182,18 +189,42 @@ nav img.brand-logo {
         cursor: pointer;
         margin: 5px 1px 0 1px;
         transition: .4s; }
-        #shop .product-details-row ul.select-color-list li.blue-color-button {
+        #shop .product-details-row ul.select-color-list li.cobalt-blue,
+        #shop .product-details-row ul.select-color-list-2 li.cobalt-blue {
           background: #4997d2; }
-        #shop .product-details-row ul.select-color-list li.green-color-button {
+        #shop .product-details-row ul.select-color-list li.midnight-blue,
+        #shop .product-details-row ul.select-color-list-2 li.midnight-blue {
           background: #65c0b7; }
-        #shop .product-details-row ul.select-color-list li.black-color-button {
-          background: black; }
-        #shop .product-details-row ul.select-color-list li.orange-color-button {
-          background: #f8bb18; }
-        #shop .product-details-row ul.select-color-list li.pink-color-button {
+        #shop .product-details-row ul.select-color-list li.blue-camo,
+        #shop .product-details-row ul.select-color-list-2 li.blue-camo {
+          background: #1e3d83; }
+        #shop .product-details-row ul.select-color-list li.island-paradise,
+        #shop .product-details-row ul.select-color-list-2 li.island-paradise {
           background: #ea6b8c; }
-        #shop .product-details-row ul.select-color-list li.yellow-color-button {
+        #shop .product-details-row ul.select-color-list li.seafoam-green,
+        #shop .product-details-row ul.select-color-list-2 li.seafoam-green {
+          background: #65c0b7; }
+        #shop .product-details-row ul.select-color-list li.persian-pink,
+        #shop .product-details-row ul.select-color-list-2 li.persian-pink {
+          background: #ea6b8c; }
+        #shop .product-details-row ul.select-color-list li.barbie-pink,
+        #shop .product-details-row ul.select-color-list-2 li.barbie-pink {
+          background: #b377b0; }
+        #shop .product-details-row ul.select-color-list li.flame-red,
+        #shop .product-details-row ul.select-color-list-2 li.flame-red {
+          background: #e50011; }
+        #shop .product-details-row ul.select-color-list li.lemon-yellow,
+        #shop .product-details-row ul.select-color-list-2 li.lemon-yellow {
           background: #fcee00; }
+        #shop .product-details-row ul.select-color-list li.marigold-orange,
+        #shop .product-details-row ul.select-color-list-2 li.marigold-orange {
+          background: #f8bb18; }
+        #shop .product-details-row ul.select-color-list li.matte-black,
+        #shop .product-details-row ul.select-color-list-2 li.matte-black {
+          background: #3c3a3b; }
+        #shop .product-details-row ul.select-color-list li.pale-dogwood,
+        #shop .product-details-row ul.select-color-list-2 li.pale-dogwood {
+          background: #ebd5e5; }
   #shop .ion-ios-arrow-left {
     left: 10%; }
   #shop .ion-ios-arrow-right {
@@ -206,17 +237,17 @@ nav img.brand-logo {
     color: white;
     z-index: 200; }
   #shop h2 {
-    color: white; }
+    color: black; }
   #shop h6 {
     font-weight: 300;
-    opacity: .6;
+    opacity: .8;
     font-size: 25px;
-    color: white;
+    color: black;
     margin-bottom: 35px; }
   #shop .carousel-inner {
     z-index: 20; }
   #shop .item {
-    margin-top: 60px; }
+    margin-top: 10px; }
   #shop .item.active {
     z-index: 10;
     position: relative;
@@ -237,6 +268,8 @@ nav img.brand-logo {
     text-align: center; }
     #shop #product-views-carousel .carousel-inner {
       position: relative; }
+      #shop #product-views-carousel .carousel-inner .item.active img {
+        margin-top: -80px; }
     #shop #product-views-carousel .carousel-controller-row {
       background: red;
       position: absolute;
@@ -251,8 +284,8 @@ nav img.brand-logo {
     height: 1px;
     width: 90%;
     margin: 20px auto;
-    background: #f3f3f3;
-    opacity: .2; }
+    background: #ccc;
+    opacity: 1; }
 
 footer#footer {
   background: #fff;
@@ -279,7 +312,7 @@ footer#footer {
       width: 800px; }
     body #shop .item.active,
     body #shop .item {
-      margin-top: 70px; } }
+      margin-top: 20px; } }
 @media (max-width: 1023px) and (min-width: 769px) {
   body #product-views-carousel {
     position: relative !important;
@@ -318,28 +351,52 @@ footer#footer {
   #shop .carousel-controller-row,
   #shop .carousel-indicators {
     display: none; } }
-body#shop-body.blue li#blue {
+body#shop-body.cobalt-blue li#cobalt-blue {
   transform: scale(1.2);
-  border: 1.5px solid white; }
+  border: 1.5px solid rgba(0, 0, 0, 0.7); }
 
-body#shop-body.green li#green {
+body#shop-body.midnight-blue li#midnight-blue {
   transform: scale(1.2);
-  border: 1.5px solid white; }
+  border: 1.5px solid rgba(0, 0, 0, 0.7); }
 
-body#shop-body.black li#black {
+body#shop-body.blue-camo li#blue-camo {
   transform: scale(1.2);
-  border: 1.5px solid white; }
+  border: 1.5px solid rgba(0, 0, 0, 0.7); }
 
-body#shop-body.orange li#orange {
+body#shop-body.island-paradise li#island-paradise {
   transform: scale(1.2);
-  border: 1.5px solid white; }
+  border: 1.5px solid rgba(0, 0, 0, 0.7); }
 
-body#shop-body.pink li#pink {
+body#shop-body.seafoam-green li#seafoam-green {
   transform: scale(1.2);
-  border: 1.5px solid white; }
+  border: 1.5px solid rgba(0, 0, 0, 0.7); }
 
-body#shop-body.yellow li#yellow {
+body#shop-body.persian-pink li#persian-pink {
   transform: scale(1.2);
-  border: 1.5px solid white; }
+  border: 1.5px solid rgba(0, 0, 0, 0.7); }
+
+body#shop-body.barbie-pink li#barbie-pink {
+  transform: scale(1.2);
+  border: 1.5px solid rgba(0, 0, 0, 0.7); }
+
+body#shop-body.flame-red li#flame-red {
+  transform: scale(1.2);
+  border: 1.5px solid rgba(0, 0, 0, 0.7); }
+
+body#shop-body.lemon-yellow li#lemon-yellow {
+  transform: scale(1.2);
+  border: 1.5px solid rgba(0, 0, 0, 0.7); }
+
+body#shop-body.marigold-orange li#marigold-orange {
+  transform: scale(1.2);
+  border: 1.5px solid rgba(0, 0, 0, 0.7); }
+
+body#shop-body.matte-black li#matte-black {
+  transform: scale(1.2);
+  border: 1.5px solid rgba(0, 0, 0, 0.7); }
+
+body#shop-body.pale-dogwood li#pale-dogwood {
+  transform: scale(1.2);
+  border: 1.5px solid rgba(0, 0, 0, 0.7); }
 
 /*# sourceMappingURL=styles.css.map */
