--- a/css/styles.scss
+++ b/css/styles.scss
@@ -77,6 +77,21 @@ nav {
       width: 100%;
       }
     }
+    .find-color-container {
+      position: relative;
+        h2 {
+          position: absolute;
+          top: 35%;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          font-size: 55px;
+          font-weight: 600;
+          letter-spacing: 1.2px;
+          // vertical-align: middle;
+          text-align: center;
+        }
+    }
 }
   #three-row {
     background: white;
@@ -244,7 +259,8 @@ border-radius: 13px;
                    background: #65c0b7;
                  }
                  &.blue-camo {
-                   background: #1e3d83;
+                   background: url('../img/camo.png');
+                   background-size: contain;
                  }
                  &.island-paradise {
                    background: #ea6b8c;
@@ -313,7 +329,7 @@ border-radius: 13px;
       // background: red;
       z-index: 10;
       position: relative;
-      margin-top: 60px;
+      // margin-top: 60px;
       img {
         // position: absolute;
 
@@ -339,7 +355,7 @@ border-radius: 13px;
       position: relative;
       .item.active {
         img {
-          margin-top: -80px;
+          // margin-top: -80px;
           // max-width: 650px;
           // width: 100%;
           // height: 120px;
@@ -448,6 +464,13 @@ footer#footer {
         min-width: 80%;
         padding: 15px 10px;
       }
+
+      .find-color-container {
+        position: relative;
+          h2 {
+        font-size: 7vw;
+          }
+        }
   }
   #shop {
     #product-views-carousel {
